# CaliforniaHousing

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: api-testing.yml  python-tests.yml
api/: main.py
data/drift_data/: simulated_production_data.csv
mlruns/0/: meta.yaml
mlruns/0/616de8c8b6f4432aa337f07631332205/: meta.yaml
mlruns/0/616de8c8b6f4432aa337f07631332205/metrics/: prediction
mlruns/0/616de8c8b6f4432aa337f07631332205/tags/: mlflow.runName  mlflow.source.name
mlruns/273854134712038863/: meta.yaml
mlruns/273854134712038863/024f2fbabac647f09326b605ec65ec4e/: meta.yaml
mlruns/273854134712038863/024f2fbabac647f09326b605ec65ec4e/metrics/: MAE  MSE  R-squared  RMSE
mlruns/273854134712038863/024f2fbabac647f09326b605ec65ec4e/tags/: mlflow.log-model.history  mlflow.source.git.commit  mlflow.source.name
mlruns/414006067969691835/: meta.yaml
mlruns/414006067969691835/a2e830264ac3445bb87dc65327d50967/: meta.yaml
mlruns/414006067969691835/a2e830264ac3445bb87dc65327d50967/metrics/: MAE  MSE  R-squared  RMSE
mlruns/models/CaliforniaHousingRandomForest/: meta.yaml
mlruns/models/CaliforniaHousingRandomForest/version-1/: meta.yaml
monitoring/: data_drift_report.html  generate_drift_report.py  simulate_production_data.py
notebooks/: Mission1.ipynb  Mission2_Models.ipynb
src/models/: BestModel_randomForest.py  gradientBoosting.py  linearRegression.py
src/shap_analysis/: shap_features.py
streamlit/: Streamlit_app.py
tests/: test_api.py  test_models.py
(+7 files in other folders)
