[tool.poetry]
name = "housing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.19.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.5"
streamlit = "^1.41.1"
evidently = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
